# citris

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  settings.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: deploy-web.yml  release.yml
assets/: default_settings.ini
assets/openers/: dt_cannon.opener  pco.opener
assets/usermodes/: dpc_trainer.umode  dt_cannon.umode  pc_4line.umode
cmake/: inline_unsigned.cmake  mingw-w64-x86_64.cmake
scripts/: ci-test-windows.sh  profile.sh
src/: ai_state.cc  ai_state.h  attack.h  board.cc  board.h  command.h  debug_state.h  engine_event.h  event.h  game.cc  game.h  game_manager.cc  game_manager.h  game_state.h  human_player.cc  human_player.h  input.h  input_event.h  log.h  main.cc  main_headless.cc  main_tbp_bot.cc  match.cc  match.h  menu.cc  menu.h  notification.h  pch.h  piece.cc  piece.h  player.h  profiler.h  renderer.cc  renderer.h  rng.h  sdl_types.h  settings.cc  settings.h  srs.cc  srs.h  (+3 more)
src/ai/: ai.cc  ai.h  ai_mode.cc  ai_mode.h  beam_search.cc  beam_search.h  board_bitset.h  checkpoint.h  eval.cc  eval.h  movegen.cc  movegen.h  opener_db.cc  opener_db.h  pathfinder.cc  pathfinder.h  pc_solver.h  placement.h  plan.cc  plan.h  plan_overlay.h  puzzle_gen.cc  puzzle_gen.h  search_task.h
src/ai/eval/: atk.h  cheese.h  eval.cc  eval.h  opener.h  sprint.h  tsd.h
src/ai/pc/: LICENSE  pc_board.h  pc_combo.cc  pc_combo.h  pc_data.cc  pc_data.h  pc_solver.cc  pc_solver.h
src/controller/: ai_controller.h  controller.h  player_controller.cc  player_controller.h  tbp_controller.cc  tbp_controller.h  tool_controller.h
src/cv/: clipboard.cc  clipboard.h  color.cc  color.h  cv_image.h  detect.cc  detect.h
src/engine/: attack.h  board.cc  board.h  game.cc  game.h  game_state.h  hold_shuffle.cc  hold_shuffle.h  piece.cc  piece.h  piece_queue.cc  piece_queue.h  piece_source.h  rng.h  srs.cc  srs.h
src/presets/: blitz.h  cheese.h  finesse_trainer.h  freeplay.h  game_mode.h  mode_hooks.cc  mode_hooks.h  mode_rules.h  opener.h  presets.h  puzzle_bank.h  sprint.h  tspin_practice.h  user_mode.cc  user_mode.h  user_mode_config.cc  user_mode_config.h  versus.h
src/render/: colors.h  font.cc  font.h  layout.h  renderer.cc  renderer.h  view_model.h
src/tbp/: bot.h  codec.cc  codec.h  conversions.cc  conversions.h  external_bot.cc  external_bot.h  internal_bot.cc  internal_bot.h  types.h
src/ui/: ai_debug_panel.cc  ai_debug_panel.h  debug_panel.cc  debug_panel.h  game_ui.cc  game_ui.h  import_modal.cc  import_modal.h  menu.cc  menu.h  piece_ui.h  settings_editor.cc  settings_editor.h  widget.h
test/: bench_ai.cc  board.txt  test_moves_cli.cc  test_perft.cc  test_pieces.cc  test_versus_routing.cc
web/: build.sh  pre.js  shell.html
